--- a/css/styles.css
+++ b/css/styles.css
@@ -15,239 +15,264 @@
  */
 
 html, body {
-  font-family: 'Roboto', 'Helvetica', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-.mdl-demo .mdl-layout__header-row {
-  padding-left: 40px;
-}
-.mdl-demo .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
-  font-size: inherit;
-}
-.mdl-demo .mdl-layout__tab-bar-button {
-  display: none;
-}
-.mdl-demo .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
-  display: none;
-}
-.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
-.mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
-  overflow: visible;
-}
-.mdl-demo .mdl-layout__tab-bar-container {
-  height: 64px;
-}
-.mdl-demo .mdl-layout__tab-bar {
-  padding: 0;
-  padding-left: 16px;
-  box-sizing: border-box;
-  height: 100%;
-  width: 100%;
-}
-.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab {
-  height: 64px;
-  line-height: 64px;
-}
-.mdl-demo .mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
-  background-color: white;
-  height: 4px;
-}
-.mdl-demo main > .mdl-layout__tab-panel {
-  padding: 8px;
-  padding-top: 48px;
-}
-.mdl-demo .mdl-card {
-  height: auto;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-.mdl-demo .mdl-card > * {
-  height: auto;
-}
-.mdl-demo .mdl-card .mdl-card__supporting-text {
-  margin: 40px;
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  padding: 0;
-  color: inherit;
-  width: calc(100% - 80px);
-}
-.mdl-demo.mdl-demo .mdl-card__supporting-text h4 {
-  margin-top: 0;
-  margin-bottom: 20px;
-}
-.mdl-demo .mdl-card__actions {
-  margin: 0;
-  padding: 4px 40px;
-  color: inherit;
-}
-.mdl-demo .mdl-card__actions a {
-  color: #00BCD4;
-  margin: 0;
-}
-.mdl-demo .mdl-card__actions a:hover,
-.mdl-demo .mdl-card__actions a:active {
-  color: inherit;
-  background-color: transparent;
-}
-.mdl-demo .mdl-card__supporting-text + .mdl-card__actions {
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
-}
-.mdl-demo #add {
-  position: absolute;
-  right: 40px;
-  top: 36px;
-  z-index: 999;
+	font-family: 'Roboto', 'Helvetica', sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
-.mdl-demo .mdl-layout__content section:not(:last-of-type) {
-  position: relative;
-  margin-bottom: 48px;
+.mdl-layout__header {
+	background: url(../images/header.jpg) no-repeat center center;
 }
-.mdl-demo section.section--center {
-  max-width: 860px;
+
+.learn-page .mdl-layout__header-row {
+	padding-left: 40px;
+	justify-content: center;
+	height: 50px;
 }
-.mdl-demo #features section.section--center {
-  max-width: 620px;
+.learn-page .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
+	font-size: inherit;
 }
-.mdl-demo section > header{
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.learn-page .mdl-layout__tab-bar-button {
+	display: none;
 }
-.mdl-demo section > .section__play-btn {
-  min-height: 200px;
+.learn-page .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
+	display: none;
 }
-.mdl-demo section > header > .material-icons {
-  font-size: 3rem;
+.learn-page .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
+.learn-page .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
+	overflow: visible;
 }
-.mdl-demo section > button {
-  position: absolute;
-  z-index: 99;
-  top: 8px;
-  right: 8px;
+.learn-page .mdl-layout__tab-bar-container {
+	height: 64px;
 }
-.mdl-demo section .section__circle {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-flex: 0;
-  -webkit-flex-grow: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-  -webkit-flex-shrink: 1;
-      -ms-flex-negative: 1;
-          flex-shrink: 1;
+.learn-page .mdl-layout__tab-bar {
+	padding: 0;
+	padding-left: 16px;
+	box-sizing: border-box;
+	height: 100%;
+	width: 100%;
+	justify-content: center;
 }
-.mdl-demo section .section__text {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  -webkit-flex-shrink: 0;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
-  padding-top: 8px;
+.learn-page .mdl-layout__tab-bar .mdl-layout__tab {
+	height: 64px;
+	line-height: 64px;
 }
-.mdl-demo section .section__text h5 {
-  font-size: inherit;
-  margin: 0;
-  margin-bottom: 0.5em;
+.learn-page .mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
+	background-color: white;
+	height: 4px;
 }
-.mdl-demo section .section__text a {
-  text-decoration: none;
+
+.learn-page main > .mdl-layout__tab-panel {
+	padding: 8px;
+	padding-top: 48px;
 }
-.mdl-demo section .section__circle-container > .section__circle-container__circle {
-  width: 64px;
-  height: 64px;
-  border-radius: 32px;
-  margin: 8px 0;
+
+.learn-page section:first-child {
+	margin-top: 48px;
 }
-.mdl-demo section.section--footer .section__circle--big {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
-  margin: 8px 32px;
+
+.learn-page .mdl-card {
+	height: auto;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+			-ms-flex-direction: column;
+					flex-direction: column;
 }
-.mdl-demo .is-small-screen section.section--footer .section__circle--big {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  margin: 8px 16px;
+.learn-page .mdl-card > * {
+	height: auto;
 }
-.mdl-demo section.section--footer {
-  padding: 64px 0;
-  margin: 0 -8px -8px -8px;
+.learn-page .mdl-card .mdl-card__supporting-text {
+	margin: 40px;
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+			-ms-flex-positive: 1;
+					flex-grow: 1;
+	padding: 0;
+	color: inherit;
+	width: calc(100% - 80px);
 }
-.mdl-demo section.section--center .section__text:not(:last-child) {
-  border-bottom: 1px solid rgba(0,0,0,.13);
+.learn-page.learn-page .mdl-card__supporting-text h4 {
+	margin-top: 0;
+	margin-bottom: 20px;
 }
-.mdl-demo .mdl-card .mdl-card__supporting-text > h3:first-child {
-  margin-bottom: 24px;
+.learn-page .mdl-card__actions {
+	margin: 0;
+	padding: 4px 40px;
+	color: inherit;
 }
-.mdl-demo .mdl-layout__tab-panel:not(#overview) {
-  background-color: white;
+.learn-page a,
+.learn-page .mdl-card__actions a {
+	color: rgb(33,150,243);
+	margin: 0;
 }
-.mdl-demo #features section {
-  margin-bottom: 72px;
+.learn-page .mdl-card__actions a:hover,
+.learn-page .mdl-card__actions a:active {
+	color: inherit;
+	background-color: transparent;
 }
-.mdl-demo #features h4, #features h5 {
-  margin-bottom: 16px;
+.learn-page .mdl-card__supporting-text + .mdl-card__actions {
+	border-top: 1px solid rgba(0, 0, 0, 0.12);
 }
-.mdl-demo .toc {
-  border-left: 4px solid #C1EEF4;
-  margin: 24px;
-  padding: 0;
-  padding-left: 8px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.learn-page #add {
+	position: absolute;
+	right: 40px;
+	top: 36px;
+	z-index: 999;
 }
-.mdl-demo .toc h4 {
-  font-size: 0.9rem;
-  margin-top: 0;
+
+.learn-page .mdl-layout__content section:not(:last-of-type) {
+	position: relative;
+	margin-bottom: 48px;
 }
-.mdl-demo .toc a {
-  color: #4DD0E1;
-  text-decoration: none;
-  font-size: 16px;
-  line-height: 28px;
-  display: block;
+.learn-page section.section--center {
+	max-width: 860px;
 }
-.mdl-demo .mdl-menu__container {
-  z-index: 99;
+.learn-page #features section.section--center {
+	max-width: 620px;
+}
+.learn-page section > header {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.learn-page section .what-is-image {
+	width: 100%;
+	height: 240px;
+	background: url(../images/e3-480x360.jpg) no-repeat center center;
+	background-size: cover;
+}
+
+.learn-page section > .section__play-btn {
+	min-height: 200px;
+}
+.learn-page section > header > .material-icons {
+	font-size: 3rem;
+}
+.learn-page section > button {
+	position: absolute;
+	z-index: 99;
+	top: 8px;
+	right: 8px;
+}
+.learn-page section .section__circle {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+			-ms-flex-align: center;
+					align-items: center;
+	-webkit-box-pack: start;
+	-webkit-justify-content: flex-start;
+			-ms-flex-pack: start;
+					justify-content: flex-start;
+	-webkit-box-flex: 0;
+	-webkit-flex-grow: 0;
+			-ms-flex-positive: 0;
+					flex-grow: 0;
+	-webkit-flex-shrink: 1;
+			-ms-flex-negative: 1;
+					flex-shrink: 1;
+}
+.learn-page section .section__text {
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+			-ms-flex-positive: 1;
+					flex-grow: 1;
+	-webkit-flex-shrink: 0;
+			-ms-flex-negative: 0;
+					flex-shrink: 0;
+	padding-top: 8px;
+}
+.learn-page section .section__text h5 {
+	font-size: inherit;
+	margin: 0;
+	margin-bottom: 0.5em;
+}
+.learn-page section .section__text a {
+	text-decoration: none;
+}
+
+.learn-page section .section__circle-container {
+	text-align: center;
+}
+
+.learn-page section .section__circle-container > .section__circle-container__circle {
+	width: 64px;
+	height: 64px;
+	border-radius: 32px;
+	margin: 8px 0;
+}
+
+.learn-page section .section__circle-container > img {
+	width: auto;
+	height: 64px;
+}
+
+.learn-page section.section--footer .section__circle--big {
+	width: 100px;
+	height: 100px;
+	border-radius: 50px;
+	margin: 8px 32px;
+}
+.learn-page .is-small-screen section.section--footer .section__circle--big {
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
+	margin: 8px 16px;
+}
+.learn-page section.section--footer {
+	padding: 64px 0;
+	margin: 0 -8px -8px -8px;
+}
+.learn-page section.section--center .section__text:not(:last-child) {
+	border-bottom: 1px solid rgba(0,0,0,.13);
+}
+.learn-page .mdl-card .mdl-card__supporting-text > h3:first-child {
+	margin-bottom: 24px;
+}
+.learn-page .mdl-layout__tab-panel:not(#overview) {
+	background-color: white;
+}
+.learn-page #features section {
+	margin-bottom: 72px;
+}
+.learn-page #features h4, #features h5 {
+	margin-bottom: 16px;
+}
+.learn-page .toc {
+	border-left: 4px solid #C1EEF4;
+	margin: 24px;
+	padding: 0;
+	padding-left: 8px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+			-ms-flex-direction: column;
+					flex-direction: column;
+}
+.learn-page .toc h4 {
+	font-size: 0.9rem;
+	margin-top: 0;
+}
+.learn-page .toc a {
+	color: #4DD0E1;
+	text-decoration: none;
+	font-size: 16px;
+	line-height: 28px;
+	display: block;
+}
+.learn-page .mdl-menu__container {
+	z-index: 99;
 }
