--- a/assets/styles/learn.styl
+++ b/assets/styles/learn.styl
@@ -27,11 +27,17 @@
 	padding: 4px 40px;
 	color: inherit;
 }
+
 .learn-page a,
 .learn-page .mdl-card__actions a {
 	color: rgb(33,150,243);
 	margin: 0;
+
+	&:hover {
+		color: inherit;
+	}
 }
+
 .learn-page .mdl-card__actions a:hover,
 .learn-page .mdl-card__actions a:active {
 	color: inherit;
@@ -105,6 +111,7 @@
 
 .learn-page section .section__circle-container {
 	text-align: center;
+	min-height: 80px;
 }
 
 .learn-page section .section__circle-container > .section__circle-container__circle {
