--- a/templates/default.html
+++ b/templates/default.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{{ site.title }}: {{ page.title }}</title>
+		<title>{{ site.title }}</title>
 
 		<!-- Add to homescreen for Chrome on Android -->
 		<meta name="mobile-web-app-capable" content="yes">
@@ -57,16 +57,18 @@
 						<ul class="mdl-mini-footer__link-list">
 							<li><a href="/process.html">Process</a></li>
 							<li><a href="/building.html">Building</a></li>
+							<li><a href="/costs.html">Costs</a></li>
+							<!-- <li><a href="/resources.html">Resrouces</a></li> -->
 						</ul>
 					</div>
 
-					<div class="mdl-mini-footer__right-section">
+					<!-- <div class="mdl-mini-footer__right-section">
 						<div class="mdl-logo">{{ site.title }}</div>
 						<ul class="mdl-mini-footer__link-list">
 							<li><a href="/about.html">About</a></li>
 							<li><a href="/legal.html">Privacy & Terms</a></li>
 						</ul>
-					</div>
+					</div> -->
 				</footer>
 			</main>
 		</div>
