--- a/assets/styles/base.styl
+++ b/assets/styles/base.styl
@@ -7,3 +7,11 @@ html, body {
 .mdl-layout__header {
 	background: url(../images/header.jpg) no-repeat center center;
 }
+
+.mdl-layout__tab-panel:not(#overview) {
+	background-color: white;
+}
+
+.mdl-menu__container {
+	z-index: 99;
+}
