--- a/assets/styles/toc.styl
+++ b/assets/styles/toc.styl
@@ -1,5 +1,5 @@
 .toc {
-	border-left: 4px solid #C1EEF4;
+	border-left: 4px solid #2196f3;
 	margin: 24px;
 	padding: 0;
 	padding-left: 8px;
@@ -13,7 +13,6 @@
 }
 
 .toc a {
-	color: #4DD0E1;
 	text-decoration: none;
 	font-size: 16px;
 	line-height: 28px;
