--- a/assets/styles/header.styl
+++ b/assets/styles/header.styl
@@ -1,7 +1,19 @@
+.mdl-layout__header {
+	background: url(../images/header.jpg) no-repeat center center;
+}
+
 .mdl-layout__header-row {
 	padding-left: 40px;
 	justify-content: center;
 	height: 50px;
+
+	h3 {
+		text-shadow: 0 1px 0 #ccc,
+		               0 2px 0 #c9c9c9,
+		               0 3px 0 #bbb,
+		               0 4px 0 #aaa,
+		               0px 6px 3px #000;
+	}
 }
 
 .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
