--- a/templates/default.html
+++ b/templates/default.html
@@ -36,7 +36,7 @@
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
 				</div>
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
-					<!-- <h3>Urban Tribalist</h3> -->
+					<h3>Custom Urban Collectives</h3>
 				</div>
 				<!-- <div class="mdl-layout--large-screen-only mdl-layout__header-row">
 				</div> -->
