--- a/assets/styles/header.styl
+++ b/assets/styles/header.styl
@@ -1,5 +1,5 @@
 .mdl-layout__header {
-	background: url(../images/header.jpg) no-repeat center center;
+	background: url(../images/header-dark.jpg) no-repeat center center;
 }
 
 .mdl-layout__header-row {
@@ -21,7 +21,7 @@
 }
 
 header .mdl-layout__tab-bar {
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(0,0,0,0.4);
 }
 
 .mdl-layout__tab-bar-button {
