--- a/templates/default.html
+++ b/templates/default.html
@@ -21,7 +21,7 @@
 		<meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
 		<meta name="msapplication-TileColor" content="#3372DF">
 
-		<!-- <link rel="shortcut icon" href="images/favicon.png"> -->
+		<link rel="shortcut icon" href="favicon.png">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -35,16 +35,16 @@
 			<header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
 				</div>
-				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
-					<h3>Custom Urban Collectives</h3>
-				</div>
 				<!-- <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+					<h3>Baugruppen: Custom Collectives</h3>
 				</div> -->
+				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
+				</div>
 				<!-- <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
 					<a href="/" class="mdl-layout__tab is-active">Learn</a>
-					<a href="http://forums.urbantribalist.org" class="mdl-layout__tab">Forums</a>
-					<a href="http://directory.urbantribalist.org" class="mdl-layout__tab">Group Directory</a>
-					<a href="http://groups.urbantribalist.org/login" class="mdl-layout__tab">Login</a>
+					<a href="http://forums.customcollective.net" class="mdl-layout__tab">Forums</a>
+					<a href="http://directory.customcollective.net" class="mdl-layout__tab">Search</a>
+					<a href="http://groups.customcollective.net/login" class="mdl-layout__tab">Login</a>
 				</div> -->
 			</header>
 			<main class="mdl-layout__content">
@@ -53,22 +53,22 @@
 
 				<footer class="mdl-mini-footer">
 					<div class="mdl-mini-footer__left-section">
-					<div class="mdl-logo">Learn:</div>
+						<div class="mdl-logo">Learn:</div>
 						<ul class="mdl-mini-footer__link-list">
-							<li><a href="/process.html">Process</a></li>
-							<li><a href="/building.html">Building</a></li>
-							<li><a href="/costs.html">Costs</a></li>
-							<!-- <li><a href="/resources.html">Resrouces</a></li> -->
+							<li><a href="process.html">Process</a></li>
+							<li><a href="building.html">Building</a></li>
+							<!-- <li><a href="resources.html">Resrouces</a></li> -->
 						</ul>
 					</div>
 
-					<!-- <div class="mdl-mini-footer__right-section">
-						<div class="mdl-logo">{{ site.title }}</div>
+					<div class="mdl-mini-footer__right-section">
+						<!-- <div class="mdl-logo">{{ site.title }}</div>
 						<ul class="mdl-mini-footer__link-list">
-							<li><a href="/about.html">About</a></li>
-							<li><a href="/legal.html">Privacy & Terms</a></li>
-						</ul>
-					</div> -->
+							<li><a href="about.html">About</a></li>
+							<li><a href="legal.html">Privacy & Terms</a></li>
+						</ul> -->
+						<img src="favicon.png" style="width: 60px; height: auto;">
+					</div>
 				</footer>
 			</main>
 		</div>
