--- a/templates/default.html
+++ b/templates/default.html
@@ -9,26 +9,26 @@
 
 		<!-- Add to homescreen for Chrome on Android -->
 		<meta name="mobile-web-app-capable" content="yes">
-		<link rel="icon" sizes="192x192" href="images/android-desktop.png">
+		<link rel="icon" sizes="192x192" href="/images/android-desktop.png">
 
 		<!-- Add to homescreen for Safari on iOS -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="apple-mobile-web-app-title" content="Material Design Lite">
-		<link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
+		<link rel="apple-touch-icon-precomposed" href="/images/ios-desktop.png">
 
 		<!-- Tile icon for Win8 (144x144 + tile color) -->
-		<meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+		<meta name="msapplication-TileImage" content="/images/touch/ms-touch-icon-144x144-precomposed.png">
 		<meta name="msapplication-TileColor" content="#3372DF">
 
-		<link rel="shortcut icon" href="favicon.png">
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/favicon.png">
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-		<link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic&amp;lang=en" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.blue-amber.min.css" />
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="/css/styles.css">
 	</head>
 	<body class="{{ page.title }}-page mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
 		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -55,9 +55,9 @@
 					<div class="mdl-mini-footer__left-section">
 						<div class="mdl-logo">Learn:</div>
 						<ul class="mdl-mini-footer__link-list">
-							<li><a href="process.html">Process</a></li>
-							<li><a href="building.html">Building</a></li>
-							<!-- <li><a href="resources.html">Resrouces</a></li> -->
+							<li><a href="/process">Process</a></li>
+							<li><a href="/building">Building</a></li>
+							<!-- <li><a href="/resources">Resrouces</a></li> -->
 						</ul>
 					</div>
 
@@ -67,7 +67,7 @@
 							<li><a href="about.html">About</a></li>
 							<li><a href="legal.html">Privacy & Terms</a></li>
 						</ul> -->
-						<img src="favicon.png" style="width: 60px; height: auto;">
+						<img src="/favicon.png" style="width: 60px; height: auto;">
 					</div>
 				</footer>
 			</main>
