--- a/assets/styles/building.styl
+++ b/assets/styles/building.styl
@@ -3,6 +3,10 @@
 		margin-top: 16px;
 	}
 
+	.toc {
+		min-height: 20px;
+	}
+
 	.card-image.mdl-card {
 		background-position: bottom;
 		background-size: cover;
@@ -20,6 +24,7 @@
 		padding: 10px;
 		font-size: 10px;
 		text-align: right;
+		color: #fff;
 
 		& > a {
 			color: #fff;
@@ -27,7 +32,7 @@
 	}
 
 	.card-image__float-right > .mdl-card__actions {
-		background: rgba(0, 0, 0, 0.3);
+		background: rgba(0, 0, 0, 0.4);
 	}
 }
 
