--- a/assets/styles/section.styl
+++ b/assets/styles/section.styl
@@ -44,6 +44,7 @@ section .section__text {
 	flex-grow: 1;
 	flex-shrink: 0;
 	padding-top: 8px;
+	padding-right: 15px;
 }
 
 section .section__text h5 {
