--- a/templates/default.html
+++ b/templates/default.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+		<meta name="description" content="A website for learning more about baugruppen (or: urban cohousing, intentional communities)">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{ site.title }}</title>
 
 		<!-- Add to homescreen for Chrome on Android -->
-		<meta name="mobile-web-app-capable" content="yes">
-		<link rel="icon" sizes="192x192" href="/images/android-desktop.png">
+		<!-- <meta name="mobile-web-app-capable" content="yes"> -->
+		<!-- <link rel="icon" sizes="192x192" href="/images/android-desktop.png"> -->
 
 		<!-- Add to homescreen for Safari on iOS -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-title" content="Material Design Lite">
-		<link rel="apple-touch-icon-precomposed" href="/images/ios-desktop.png">
+		<meta name="apple-mobile-web-app-title" content="{{ site.title }}">
+		<!-- <link rel="apple-touch-icon-precomposed" href="/images/ios-desktop.png"> -->
 
 		<!-- Tile icon for Win8 (144x144 + tile color) -->
-		<meta name="msapplication-TileImage" content="/images/touch/ms-touch-icon-144x144-precomposed.png">
-		<meta name="msapplication-TileColor" content="#3372DF">
+		<!-- <meta name="msapplication-TileImage" content="/images/touch/ms-touch-icon-144x144-precomposed.png"> -->
+		<!-- <meta name="msapplication-TileColor" content="#3372DF"> -->
 
 		<link rel="shortcut icon" href="/favicon.png">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
