--- a/assets/styles/header.styl
+++ b/assets/styles/header.styl
@@ -1,5 +1,6 @@
 .mdl-layout__header {
 	background: url(../images/header-dark.jpg) no-repeat center center;
+	// background-color: rgba(0, 0, 0, 0.9);
 }
 
 .mdl-layout__header-row {
@@ -8,16 +9,22 @@
 	height: 50px;
 
 	h3 {
-		text-shadow: 0 1px 0 #ccc,
-		               0 2px 0 #c9c9c9,
-		               0 3px 0 #bbb,
-		               0 4px 0 #aaa,
-		               0px 6px 3px #000;
+		text-shadow: 0px 1px 2px #000;
+		font-weight: 300;
+	}
+
+	h4 {
+		margin: 0;
+		font-weight: 300;
+		font-style: italic;
 	}
 }
 
-.mdl-layout.is-small-screen .mdl-layout__header-row h3 {
-	font-size: inherit;
+.mdl-layout.is-small-screen .mdl-layout__header-row h3,
+.mdl-layout.is-small-screen .mdl-layout__header-row h4 {
+	font-size: 1.4em;
+	margin-left: 5px;
+	font-weight: 300;
 }
 
 header .mdl-layout__tab-bar {
