--- a/templates/default.html
+++ b/templates/default.html
@@ -32,13 +32,18 @@
 	</head>
 	<body class="{{ page.title }}-page mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
 		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-			<header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
+			<header class="mdl-layout__header mdl-layout__header--scroll">
+				<div class="mdl-layout--large-screen-only mdl-layout__header-row"></div>
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
+					<h3>Custom Community</h3>
 				</div>
-				<!-- <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-					<h3>Baugruppen: Custom Collectives</h3>
-				</div> -->
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
+					<h4>Network</h4>
+				</div>
+				<div class="mdl-layout--large-screen-only mdl-layout__header-row"></div>
+
+				<div class="mdl-layout--small-screen-only mdl-layout__header-row">
+					<h3>Custom Community</h3><h4>Network</h4>
 				</div>
 				<!-- <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
 					<a href="/" class="mdl-layout__tab is-active">Learn</a>
