--- a/assets/styles/header.styl
+++ b/assets/styles/header.styl
@@ -4,7 +4,8 @@
 }
 
 .mdl-layout__header-row {
-	padding-left: 40px;
+	padding-right: 0;
+	padding-left: 0;
 	justify-content: center;
 	height: 50px;
 
@@ -20,9 +21,13 @@
 	}
 }
 
-.mdl-layout.is-small-screen .mdl-layout__header-row h3,
-.mdl-layout.is-small-screen .mdl-layout__header-row h4 {
+.mdl-layout.is-small-screen .mdl-layout__header-row h3 {
 	font-size: 1.4em;
+	font-weight: 300;
+}
+
+.mdl-layout.is-small-screen .mdl-layout__header-row h4 {
+	font-size: 1.2em;
 	margin-left: 5px;
 	font-weight: 300;
 }
