--- a/templates/default.html
+++ b/templates/default.html
@@ -35,21 +35,21 @@
 			<header class="mdl-layout__header mdl-layout__header--scroll">
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row"></div>
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
-					<h3>Custom Community</h3>
+					<h3>{{ site.title }}</h3>
 				</div>
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row">
-					<h4>Network</h4>
+					<h4>{{ site.subtitle }}</h4>
 				</div>
 				<div class="mdl-layout--large-screen-only mdl-layout__header-row"></div>
 
 				<div class="mdl-layout--small-screen-only mdl-layout__header-row">
-					<h3>Custom Community</h3><h4>Network</h4>
+					<h3>{{ site.title }}</h3>
 				</div>
 				<!-- <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
 					<a href="/" class="mdl-layout__tab is-active">Learn</a>
-					<a href="http://forums.customcollective.net" class="mdl-layout__tab">Forums</a>
-					<a href="http://directory.customcollective.net" class="mdl-layout__tab">Search</a>
-					<a href="http://groups.customcollective.net/login" class="mdl-layout__tab">Login</a>
+					<a href="https://find.customcommunities.net" class="mdl-layout__tab">Find</a>
+					<a href="https://discuss.customcommunities.net" class="mdl-layout__tab">Discuss</a>
+					<a href="https://collaborate.customcommunities.net/login" class="mdl-layout__tab">Login</a>
 				</div> -->
 			</header>
 			<main class="mdl-layout__content">
