added feedback form

--- a/assets/styles/section.styl
+++ b/assets/styles/section.styl
@@ -4,6 +4,10 @@ section:first-child {
 
 section.section--center {
 	max-width: 860px;
+
+	p a {
+		text-decoration: none;
+	}
 }
 
 .mdl-layout__content section:not(:last-of-type) {
@@ -48,7 +52,7 @@ section .section__text {
 }
 
 section .section__text h5 {
-	font-size: inherit;
+	font-weight: 300;
 	margin: 0;
 	margin-bottom: 0.5em;
 }
