--- a/assets/styles/building.styl
+++ b/assets/styles/building.styl
@@ -34,6 +34,10 @@
 	.card-image__float-right > .mdl-card__actions {
 		background: rgba(0, 0, 0, 0.4);
 	}
+
+	.mdl-grid.mdl-grid--no-spacing > .mdl-cell {
+		margin: 10px;
+	}
 }
 
 @media (max-width: 479px) { // phone
