--- a/templates/default.html
+++ b/templates/default.html
@@ -56,6 +56,8 @@
 
 				{% block content %}{% endblock %}
 
+				<!-- {% include '../components/feedback-form/feedback-form.html' %} -->
+
 				<footer class="mdl-mini-footer">
 					<div class="mdl-mini-footer__left-section">
 						<div class="mdl-logo">Learn:</div>
@@ -86,5 +88,6 @@
 		ga('send', 'pageview');
 		</script>
 		<script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+		<script src="js/scripts.js"></script>
 	</body>
 </html>
