--- a/templates/default.html
+++ b/templates/default.html
@@ -88,6 +88,6 @@
 		ga('send', 'pageview');
 		</script>
 		<script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
-		<script src="js/scripts.js"></script>
+		<!-- <script src="js/scripts.js"></script> -->
 	</body>
 </html>
