--- a/assets/styles/header.styl
+++ b/assets/styles/header.styl
@@ -21,6 +21,10 @@
 	}
 }
 
+.mdl-layout__header--scroll {
+	box-shadow: 0 2px 2px 2px rgba(0,0,0,.4), 0 1px 2px 0 rgba(0,0,0,0.7);
+}
+
 .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
 	font-size: 1.4em;
 	font-weight: 300;
