--- a/assets/styles/header.styl
+++ b/assets/styles/header.styl
@@ -22,7 +22,7 @@
 }
 
 .mdl-layout__header--scroll {
-	box-shadow: 0 2px 2px 2px rgba(0,0,0,.4), 0 1px 2px 0 rgba(0,0,0,0.7);
+	box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
 }
 
 .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
