--- a/assets/styles/base.styl
+++ b/assets/styles/base.styl
@@ -16,6 +16,10 @@ p {
 	background-color: white;
 }
 
+.learn-page .mdl-layout__content section {
+	margin: 48px auto auto;
+}
+
 .mdl-menu__container {
 	z-index: 99;
 }
