--- a/assets/styles/section.styl
+++ b/assets/styles/section.styl
@@ -4,10 +4,6 @@ section:first-child {
 
 section.section--center {
 	max-width: 860px;
-
-	p a {
-		text-decoration: none;
-	}
 }
 
 .mdl-layout__content section:not(:last-of-type) {
@@ -57,10 +53,6 @@ section .section__text h5 {
 	margin-bottom: 0.5em;
 }
 
-section .section__text a {
-	text-decoration: none;
-}
-
 section .section__circle-container {
 	text-align: center;
 	min-height: 80px;
@@ -106,5 +98,6 @@ section.section--footer {
 }
 
 section.section--center .section__text:not(:last-child) {
-	border-bottom: 1px solid rgba(0,0,0,.13);
+	margin-bottom: 15px;
+	// border-bottom: 1px solid rgba(0,0,0,.13);
 }
