--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -2,9 +2,12 @@
 	<div class="mdl-mini-footer__left-section">
 		<div class="mdl-logo">Learn:</div>
 		<ul class="mdl-mini-footer__link-list">
+			<li><a href="/">Intro</a></li>
 			<li><a href="/process">Process</a></li>
 			<li><a href="/building">Building</a></li>
-			<!-- <li><a href="/resources">Resrouces</a></li> -->
+			<li><a href="/glossary">Glossary</a></li>
+			<li><a href="/about">About</a></li>
+			<!-- <li><a href="/resources">Resources</a></li> -->
 		</ul>
 	</div>
 
