--- a/assets/styles/header.styl
+++ b/assets/styles/header.styl
@@ -1,9 +1,26 @@
-.mdl-layout__header {
+.cb-layout__header {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	text-align: center;
+	box-sizing: border-box;
+	flex-shrink: 0;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	border: none;
+	min-height: 64px;
+	max-height: 300px;
 	background: url(../images/header-dark.jpg) no-repeat center center;
-	// background-color: rgba(0, 0, 0, 0.9);
+	// background: #242424;
+	color: rgb(255,255,255);
+	transition-duration: .2s;
+	transition-timing-function: cubic-bezier(.4,0,.2,1);
+	transition-property: max-height,box-shadow;
 }
 
-.mdl-layout__header-row {
+.cb-layout__header-row {
 	padding-right: 0;
 	padding-left: 0;
 	justify-content: center;
@@ -12,71 +29,37 @@
 	h3 {
 		text-shadow: 0px 1px 2px #000;
 		font-weight: 300;
-	}
-
-	h4 {
-		margin: 0;
-		font-weight: 300;
-		font-style: italic;
+		line-height: 0;
+		font-size: 1.4em;
 	}
 }
 
-.mdl-layout__header--scroll {
-	box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
-}
-
-.mdl-layout.is-small-screen .mdl-layout__header-row h3 {
-	font-size: 1.4em;
-	font-weight: 300;
-}
-
-.mdl-layout.is-small-screen .mdl-layout__header-row h4 {
-	font-size: 1.2em;
-	margin-left: 5px;
-	font-weight: 300;
-}
-
-header .mdl-layout__tab-bar {
-	background-color: rgba(0,0,0,0.4);
-}
-
-.mdl-layout__tab-bar-button {
-	display: none;
-}
-
-.mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
-	display: none;
-}
-
-.mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
-.mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
-	overflow: visible;
-}
-
-.mdl-layout__tab-bar-container {
-	height: 64px;
-}
-
-.mdl-layout__tab-bar {
-	padding: 0;
-	padding-left: 16px;
-	box-sizing: border-box;
-	height: 100%;
+.cb-layout__tab-bar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 32px;
 	width: 100%;
 	justify-content: center;
+	// background-color: rgba(0,0,0,0.4);
 }
 
-.mdl-layout__tab-bar .mdl-layout__tab {
-	height: 64px;
-	line-height: 64px;
-}
+.cb-layout__tab-item {
+	box-sizing: border-box;
+	height: 100%;
+	padding: 5px 10px 10px;
+	color: rgba(255, 255, 255, 0.7);
+	text-transform: uppercase;
+	text-decoration: none;
+	transition: all 140ms linear;
 
-.mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
-	background-color: white;
-	height: 4px;
-}
+	&:hover {
+		color: rgba(255, 255, 255, 1);
+		text-decoration: none;
+	}
 
-main > .mdl-layout__tab-panel {
-	padding: 8px;
-	padding-top: 48px;
+	&--active {
+		color: rgba(255, 255, 255, 1);
+		border-bottom: 3px solid rgb(33,150,243);
+	}
 }
