--- a/assets/styles/learn.styl
+++ b/assets/styles/learn.styl
@@ -1,9 +1,14 @@
 .learn-page {
 	section .what-is-image {
 		width: 100%;
-		height: 270px;
+		height: 100%;
 		background: url(../images/e3-480x360.jpg) no-repeat center center;
 		background-size: cover;
 	}
 }
 
+@media (max-width: 479px) { // phone
+	.learn-page section .what-is-image {
+		height: 250px;
+	}
+}
