--- a/templates/default.html
+++ b/templates/default.html
@@ -37,7 +37,7 @@
 					<h3>{{ site.title }}</h3>
 				</div>
 				<div class="cb-layout__tab-bar">
-					<a class="cb-layout__tab-item {% if page.title === 'learn' %}cb-layout__tab-item--active{% endif %}" href="/">Home</a>
+					<a class="cb-layout__tab-item {% if page.title === 'learn' %}cb-layout__tab-item--active{% endif %}" href="/">Intro</a>
 					<a class="cb-layout__tab-item {% if page.title === 'process' %}cb-layout__tab-item--active{% endif %}" href="/process">Process</a>
 					<a class="cb-layout__tab-item {% if page.title === 'building' %}cb-layout__tab-item--active{% endif %}" href="/buildings">Buildings</a>
 					<a class="cb-layout__tab-item {% if page.title === 'glossary' %}cb-layout__tab-item--active{% endif %}" href="/glossary">Glossary</a>
